# fastapi-users-app

./: .env  .env.template  .gitignore  LICENSE  README.md  docker-compose.template.yml  docker-compose.yml  pyproject.toml
fastapi-application/: create_fastapi_app.py  main.py  run_main.py
fastapi-application/alembic/: env.py
fastapi-application/alembic/versions/: 2025_03_10_1417-d26c96fd141f_initial_migration.py  2025_03_10_1551-b83cd28bf4e1_create_access_tokens_table.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py  fastapi_users.py  messages.py  routers.py  schemas.py
fastapi-application/api/dependencies/: backend.py  database_dependencies.py  strategy.py  user_manager.py
fastapi-application/api/dependencies/authentication/: backend.py  database_dependencies.py  strategy.py
fastapi-application/api/webhooks/: __init__.py  user.py
fastapi-application/core/: config.py  create_superuser.py  db_helper.py  models.py  user_manager.py
fastapi-application/core/gunicorn/: app_options.py  application.py  logger.py
fastapi-application/webhooks/: user.py
